// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectServer should show dark background when user has dark color scheme set 1`] = `
<SafeAreaView
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "#171717",
      },
    ]
  }
>
  <KeyboardAvoidingView
    behavior="padding"
    enabled={true}
    keyboardVerticalOffset={0}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "backgroundColor": "#171717",
        },
      ]
    }
  >
    <StatusBar
      animated={false}
      barStyle="dark-content"
      showHideTransition="fade"
    />
    <TouchableWithoutFeedback
      accessbile={false}
      onPress={[Function]}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
              "paddingHorizontal": 15,
            },
            Object {
              "paddingLeft": 15,
              "paddingRight": 15,
            },
            Object {
              "backgroundColor": "#171717",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../dist/assets/images/logo_dark.png",
            }
          }
        />
        <View>
          <FormattedText
            defaultMessage="Enter Server URL"
            id="mobile.components.select_server_view.enterServerUrl"
            style={
              Array [
                Object {
                  "fontSize": 24,
                  "fontWeight": "500",
                  "lineHeight": 28,
                  "marginBottom": 32,
                  "marginTop": 32,
                  "textAlign": "center",
                },
                Object {
                  "color": "#dbdbdb",
                },
              ]
            }
          />
        </View>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          disableFullscreenUI={true}
          editable={false}
          keyboardType="url"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          placeholder="https://mattermost.example.com"
          placeholderTextColor="#9b9b9b"
          rejectResponderTermination={true}
          returnKeyType="go"
          style={
            Array [
              Object {
                "alignSelf": "stretch",
                "borderRadius": 4,
                "fontSize": 16,
                "height": 45,
                "paddingLeft": 10,
              },
              Object {
                "borderColor": "#9b9b9b",
                "color": "#dbdbdb",
              },
              Object {
                "borderWidth": 0,
              },
              Object {
                "backgroundColor": "#2e2e2e",
                "color": "#9b9b9b",
              },
              Object {},
            ]
          }
          underlineColorAndroid="transparent"
          value=""
        />
        <Connect(ErrorText)
          error={null}
          textStyle={
            Object {
              "width": "100%",
            }
          }
        />
        <Button
          containerStyle={
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderRadius": 3,
                "marginBottom": 16,
                "padding": 15,
              },
              Object {
                "backgroundColor": "#399fff",
              },
              Object {
                "backgroundColor": "#2e2e2e",
              },
              Object {
                "marginTop": 24,
              },
            ]
          }
          disabled={true}
          onPress={[Function]}
        >
          <Text
            style={
              Array [
                Object {
                  "fontSize": 17,
                  "fontWeight": "500",
                  "textAlign": "center",
                },
                Object {
                  "color": "#171717",
                },
                Object {
                  "color": "#9b9b9b",
                },
              ]
            }
          >
            <FormattedText
              defaultMessage="Connect"
              id="mobile.components.select_server_view.connect"
            />
          </Text>
        </Button>
      </View>
    </TouchableWithoutFeedback>
  </KeyboardAvoidingView>
</SafeAreaView>
`;

exports[`SelectServer should show light background when user has light color scheme set 1`] = `
<SafeAreaView
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "backgroundColor": "#ffffff",
      },
    ]
  }
>
  <KeyboardAvoidingView
    behavior="padding"
    enabled={true}
    keyboardVerticalOffset={0}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "backgroundColor": "#ffffff",
        },
      ]
    }
  >
    <StatusBar
      animated={false}
      barStyle="dark-content"
      showHideTransition="fade"
    />
    <TouchableWithoutFeedback
      accessbile={false}
      onPress={[Function]}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
              "paddingHorizontal": 15,
            },
            Object {
              "paddingLeft": 15,
              "paddingRight": 15,
            },
            Object {
              "backgroundColor": "#ffffff",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../dist/assets/images/logo_light.png",
            }
          }
        />
        <View>
          <FormattedText
            defaultMessage="Enter Server URL"
            id="mobile.components.select_server_view.enterServerUrl"
            style={
              Array [
                Object {
                  "fontSize": 24,
                  "fontWeight": "500",
                  "lineHeight": 28,
                  "marginBottom": 32,
                  "marginTop": 32,
                  "textAlign": "center",
                },
                Object {
                  "color": "#171717",
                },
              ]
            }
          />
        </View>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          disableFullscreenUI={true}
          editable={false}
          keyboardType="url"
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          onSubmitEditing={[Function]}
          placeholder="https://mattermost.example.com"
          placeholderTextColor="#5c5c5c"
          rejectResponderTermination={true}
          returnKeyType="go"
          style={
            Array [
              Object {
                "alignSelf": "stretch",
                "borderRadius": 4,
                "fontSize": 16,
                "height": 45,
                "paddingLeft": 10,
              },
              Object {
                "borderColor": "#dbdbdb",
                "color": "#171717",
              },
              Object {
                "borderWidth": 0,
              },
              Object {
                "backgroundColor": "#dbdbdb",
                "color": "#5c5c5c",
              },
              Object {},
            ]
          }
          underlineColorAndroid="transparent"
          value=""
        />
        <Connect(ErrorText)
          error={null}
          textStyle={
            Object {
              "width": "100%",
            }
          }
        />
        <Button
          containerStyle={
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "borderRadius": 3,
                "marginBottom": 16,
                "padding": 15,
              },
              Object {
                "backgroundColor": "#1247b1",
              },
              Object {
                "backgroundColor": "#dbdbdb",
              },
              Object {
                "marginTop": 24,
              },
            ]
          }
          disabled={true}
          onPress={[Function]}
        >
          <Text
            style={
              Array [
                Object {
                  "fontSize": 17,
                  "fontWeight": "500",
                  "textAlign": "center",
                },
                Object {
                  "color": "#ffffff",
                },
                Object {
                  "color": "#5c5c5c",
                },
              ]
            }
          >
            <FormattedText
              defaultMessage="Connect"
              id="mobile.components.select_server_view.connect"
            />
          </Text>
        </Button>
      </View>
    </TouchableWithoutFeedback>
  </KeyboardAvoidingView>
</SafeAreaView>
`;
